commiting before restarting intellij